CB-39 Fix IE11 layout bug

--- a/src/cookie-control.css
+++ b/src/cookie-control.css
@@ -2,3 +2,7 @@
 #ccc .ccc-notify-button {
 	border-radius: 0 !important;
 }
+
+.ccc-notify-text {
+	width: 100%; /* To fix IE11 layout bug */
+}
